# pydantic-computed

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  tox.ini
pydantic_computed/: __init__.py  decorator.py  types.py
tests/: test_computed.py
